--- a/GoVoyageFX/src/GUI/ConsultationHotel.fxml
+++ b/GoVoyageFX/src/GUI/ConsultationHotel.fxml
@@ -5,11 +5,11 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
@@ -38,13 +38,12 @@
                <children>
                   <ToolBar layoutX="3.0" layoutY="6.0" prefHeight="45.0" prefWidth="519.0">
                      <items>
-                        <ComboBox fx:id="box_Stars" onAction="#lireParStars" prefHeight="27.0" prefWidth="168.0" />
-                        <MenuButton fx:id="ButStars" mnemonicParsing="false" prefHeight="31.0" prefWidth="322.0">
-                          <items>
-                            <MenuItem mnemonicParsing="false" text="Action 1" />
-                            <MenuItem mnemonicParsing="false" text="Action 2" />
-                          </items>
-                        </MenuButton>
+                        <ComboBox fx:id="box_Stars" onAction="#lireParStars" prefHeight="27.0" prefWidth="259.0" />
+                        <ImageView fitHeight="34.0" fitWidth="249.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../pkgimages/enjoy.png" />
+                           </image>
+                        </ImageView>
                      </items></ToolBar>
                   <ListView fx:id="listViewHotel" layoutY="58.0" prefHeight="372.0" prefWidth="530.0" />
                   <Pane fx:id="PaneHotel" layoutX="14.0" layoutY="252.0" prefHeight="200.0" prefWidth="505.0" />
