--- a/GoVoyageFX/src/GUI/ConsultationHotel.fxml
+++ b/GoVoyageFX/src/GUI/ConsultationHotel.fxml
@@ -50,7 +50,7 @@
                               <Image url="@../pkgimages/enjoy.png" />
                            </image>
                         </ImageView>
-                        <Button fx:id="btndecont" mnemonicParsing="false" onAction="#deconnecter" prefHeight="25.0" prefWidth="124.0" style="-fx-background-color: #000000;" text="Déconnecter" textFill="#f8f8f8" />
+                        <Button fx:id="btndecont" mnemonicParsing="false" onAction="#deconnecter" prefHeight="25.0" prefWidth="124.0" style="-fx-background-color: #000000;" text="Déconnecter" textFill="#f8f8f8" visible="false" />
                      </items></ToolBar>
                   <ListView fx:id="listViewHotel" layoutY="58.0" prefHeight="440.0" prefWidth="530.0" />
                   <Pane fx:id="PaneHotel" layoutX="14.0" layoutY="252.0" prefHeight="200.0" prefWidth="505.0" />
