Change Photo Rec

--- a/GoVoyageFX/src/GUI/Reclamation/HelloReclamation.fxml
+++ b/GoVoyageFX/src/GUI/Reclamation/HelloReclamation.fxml
@@ -5,19 +5,14 @@
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="430.0" prefWidth="976.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Reclamation.HelloReclamationController">
+<AnchorPane id="AnchorPane" prefHeight="430.0" prefWidth="976.0" style="-fx-background-image: url('file:///C:/xampp/htdocs/Background-RecAdmin58.jpg');" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Reclamation.HelloReclamationController">
    <children>
-      <ImageView fitHeight="458.0" fitWidth="976.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../../../../../../xampp/htdocs/Background-RecAdmin58.jpg" />
-         </image>
-      </ImageView>
+      <ImageView fitHeight="458.0" fitWidth="976.0" pickOnBounds="true" preserveRatio="true" />
       <Label layoutX="228.0" layoutY="12.0" prefHeight="46.0" prefWidth="494.0" text="Bienvenue dans l'espace des réclamations" textFill="#19b798" underline="true">
          <font>
             <Font name="System Bold Italic" size="20.0" />
@@ -66,10 +61,5 @@
             <Font name="System Bold Italic" size="13.0" />
          </font></Button>
       <Button fx:id="log" layoutX="855.0" layoutY="44.0" mnemonicParsing="false" onAction="#logoutActionR" prefHeight="27.0" prefWidth="71.0" style="-fx-background-color: #c71111;" text="LogOut" textFill="#131212" visible="false" />
-      <ImageView fitHeight="46.0" fitWidth="52.0" layoutX="14.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../pkgimages/immo-accueil.png" />
-         </image>
-      </ImageView>
    </children>
 </AnchorPane>
